policies/required-annotation-email.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: required-annotation-email
spec:
  categories:
  - DevOps Best Practices
  - Security Best Practices
  - Supply Chain Security
  criteriaLocked: true
  description: Alert on deployments missing the 'email' annotation
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Required Annotation: Email'
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Required Annotation
      booleanOperator: OR
      negate: false
      values:
      - value: email=[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+
  rationale: The 'email' annotation should always be specified so that issues with
    the deployment can quickly be routed to the proper party.
  remediation: Redeploy your service and set the 'email' annotation as your email
    or your team's email.
  scope: []
  severity: LOW_SEVERITY
  disabled: true
